<resources>
    <string name="app_name">Beau Boutique</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="Category">Category</string>
    <string name="category">Category</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="euro">€</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="add_picture">Add picture</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string-array name="category">
        <item>Tops</item>
        <item>Trousers</item>
        <item>Skirts</item>
        <item>Dresses</item>
    </string-array>

    <string-array name="filter">
        <item>Title</item>
        <item>Manufacturer</item>
        <item>Category</item>
    </string-array>

    <string-array name="manufacturer">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="rate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>